A lot of work, Implementation all models

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,14 @@ FetchContent_MakeAvailable(SFML)
 add_executable(OffLaticeEdenModel src/main.cpp
         src/Cell.h
         src/Cell.cpp
+        src/Surface.cpp
+        src/Surface.h
         src/Lattice.cpp
-        src/Lattice.h)
+        src/Lattice.h
+        src/SqrCell.cpp
+        src/SqrCell.h)
 target_link_libraries(OffLaticeEdenModel PRIVATE sfml-graphics)
-target_compile_features(OffLaticeEdenModel PRIVATE cxx_std_17)
+target_compile_features(OffLaticeEdenModel PRIVATE cxx_std_23)
 
 if(WIN32)
     add_custom_command(
