--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,15 +10,10 @@ FetchContent_Declare(SFML
 FetchContent_MakeAvailable(SFML)
 
 add_executable(OffLaticeEdenModel src/main.cpp
-        src/Cell.h
-        src/Cell.cpp
-        src/Surface.cpp
         src/Surface.h
         src/Lattice.cpp
         src/Lattice.h
-        src/SqrCell.cpp
-        src/SqrCell.h
-        src/functions.cpp)
+        src/Cell.h)
 target_link_libraries(OffLaticeEdenModel PRIVATE sfml-graphics)
 target_compile_features(OffLaticeEdenModel PRIVATE cxx_std_23)
 
