--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,15 @@ FetchContent_Declare(SFML
     GIT_REPOSITORY https://github.com/SFML/SFML.git
     GIT_TAG 2.6.x)
 FetchContent_MakeAvailable(SFML)
-
 add_executable(OffLaticeEdenModel src/main.cpp
         src/Surface.h
         src/Cell.h)
+#        src/PlotsGenerators.cpp)
 target_link_libraries(OffLaticeEdenModel PRIVATE sfml-graphics)
 target_compile_features(OffLaticeEdenModel PRIVATE cxx_std_23)
+find_package(Boost REQUIRED COMPONENTS iostreams system filesystem)
+target_include_directories(OffLaticeEdenModel PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${Boost_INCLUDE_DIRS})
+target_link_libraries(OffLaticeEdenModel PUBLIC ${Boost_LIBRARIES})
 
 if(WIN32)
     add_custom_command(
