--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,6 @@ cmake_minimum_required(VERSION 3.16)
 project(OffLaticeEdenModel LANGUAGES CXX)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-
 include(FetchContent)
 FetchContent_Declare(SFML
     GIT_REPOSITORY https://github.com/SFML/SFML.git
@@ -18,6 +17,7 @@ target_compile_features(OffLaticeEdenModel PRIVATE cxx_std_23)
 find_package(Boost REQUIRED COMPONENTS iostreams system filesystem)
 target_include_directories(OffLaticeEdenModel PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${Boost_INCLUDE_DIRS})
 target_link_libraries(OffLaticeEdenModel PUBLIC ${Boost_LIBRARIES})
+target_link_libraries(OffLaticeEdenModel PUBLIC benchmark)
 
 if(WIN32)
     add_custom_command(
