--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,4 +23,9 @@ if(WIN32)
         VERBATIM)
 endif()
 
+if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 8.0)
+set(CMAKE_CXX20_STANDARD_COMPILE_OPTION "-std=c++2a")
+set(CMAKE_CXX20_EXTENSION_COMPILE_OPTION "-std=gnu++2a")
+endif()
+
 install(TARGETS OffLaticeEdenModel)
